--- a/src/app/components/sort-property/sort-property.component.scss
+++ b/src/app/components/sort-property/sort-property.component.scss
@@ -1,5 +1,36 @@
-.sort-dir-div {
-    display: inline-block;
-    position: absolute;
-    top: 4px;
+:host {
+    display: inline-flex;
+    max-width: 100%;
+}
+
+.sort-property {
+    display: inline-flex;
+    align-items: center;
+    gap: 4px;
+    max-width: 100%;
+}
+
+.sort-property-field {
+    width: 165px;
+}
+
+.sort-property-field ::ng-deep .mat-mdc-form-field-subscript-wrapper {
+    display: none;
+}
+
+.sort-dir-button {
+    flex: 0 0 auto;
+    opacity: 0.88;
+}
+
+@media (max-width: 576px) {
+    .sort-property {
+        width: 100%;
+    }
+
+    .sort-property-field {
+        width: auto;
+        min-width: 0;
+        flex: 1 1 auto;
+    }
 }
